--- a/product-list/package.json
+++ b/product-list/package.json
@@ -7,5 +7,12 @@
   "license": "MIT",
   "dependencies": {
     "fastify": "^3.18.1"
+  },
+  "scripts": {
+    "test": "mocha"
+  },
+  "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.0.2"
   }
 }
