--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,7 +15,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        - working-directory: product-list/
+        working-directory: product-list/
     strategy:
       matrix:
         node-version: [14.x]
