--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -6,8 +6,12 @@ name: Node.js CI
 on:
   push:
     branches: [ main ]
+    paths:
+      - product-list/
   pull_request:
     branches: [ main ]
+    paths:
+      - product-list/
 
 jobs:
   build:
