--- a/auth-service/requirements.txt
+++ b/auth-service/requirements.txt
@@ -5,3 +5,8 @@ Jinja2==3.0.1
 MarkupSafe==2.0.1
 PyJWT==2.1.0
 Werkzeug==2.0.1
+Flask-MySQL==1.4.0  
+PyMySQL==0.9.3
+uWSGI==2.0.17.1
+mysql-connector-python
+cryptography
